# pm-tool

./: .gitignore  CLAUDE.md  PLAN.md  README.md  docker-compose.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0dd21eeff47b_add_is_guest_field_to_users_table.py  a7025849f9a6_initial_migration_users_and_tasks.py
backend/app/: main.py
backend/app/api/: auth.py  schemas.py  tasks.py  websocket.py
backend/app/core/: __init__.py  config.py  dependencies.py  name_generator.py  security.py  websocket_manager.py
backend/app/models/: base.py  task.py  user.py
backend/app/services/: auth_service.py  task_service.py  user_service.py
backend/app/tests/: conftest.py  test_auth.py  test_main.py  test_tasks.py  test_websocket.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/src/__tests__/: AuthContext.test.tsx  KanbanBoard.test.tsx  LoginForm.test.tsx  RegisterForm.test.tsx  TaskModal.test.tsx  page.test.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: KanbanBoard.tsx  LoginForm.tsx  ProtectedRoute.tsx  RegisterForm.tsx  TaskCard.tsx  TaskModal.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useWebSocket.ts
